Fix opened search box issue with docked magnifier

Opened search box from peeking state does not respect docked magnifer,
so change the height of the app list to make search box fit in work
area.

Bug: 886980
Change-Id: I814bad77031767e29263a043083c1c76f6a20e8e
Reviewed-on: https://chromium-review.googlesource.com/c/1379595
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617406}
Former-commit-id: 396a729a99562256bdffdad2f17da782e7ef6bcc